# sgorch

./: .gitignore  README.md  SPEC.md  pyproject.toml  test-config.yaml
docs/: ROUTER.md  migrate-to-config-v2.md
src/sgorch/: __init__.py  config.py  config_hash.py  logging_setup.py  main.py  orchestrator.py  reconciler.py  replacement_engine.py  walltime_manager.py
src/sgorch/backends/: __init__.py  base.py
src/sgorch/discover/: adopt.py
src/sgorch/examples/: config-with-gpu-monitoring.yaml  config.yaml  tei.yaml
src/sgorch/health/: http_probe.py
src/sgorch/metrics/: prometheus.py  worker_proxy.py
src/sgorch/monitor/: gpu_monitor.py  node_probe.py  router_probe.py
src/sgorch/net/: hostaddr.py  ports.py  tunnel.py
src/sgorch/notify/: base.py  email.py  log_only.py
src/sgorch/policy/: failure.py
src/sgorch/router/: client.py  metrics.py  runtime.py
src/sgorch/scripts/: systemd-user.service
tests/: conftest.py  test_cli.py  test_config.py  test_config_hash.py  test_discover_adopt.py  test_health_http_probe.py  test_hypothesis_props.py  test_logging_setup.py  test_metrics_extras.py  test_metrics_prometheus.py  test_net_hostaddr.py  test_net_ports.py  test_net_tunnel.py  test_notify.py  test_notify_composite.py  test_orchestrator.py  test_policy_failure.py  test_reconciler.py  test_replacement_engine.py  test_router_client.py  test_router_runtime.py  test_router_slurm_negatives.py  test_sbatch_templates.py  test_slurm_cli.py  test_slurm_parse.py  test_slurm_rest.py  test_state_file_store.py  test_time_limit_stagger.py  test_walltime_manager.py
(+10 files in other folders)
