[project]
name = "sgorch"
version = "0.1.0"
description = "SLURM ↔ SGLang Orchestrator"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
    "tenacity>=8.2",
    "pydantic>=2",
    "ruamel.yaml>=0.18",
    "typer>=0.9",
    "prometheus_client>=0.20",
]

[project.scripts]
sgorch = "sgorch.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
