[project]
name = "sgorch"
version = "0.1.0"
description = "SLURM ↔ SGLang Orchestrator"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
    "tenacity>=8.2",
    "pydantic>=2",
    "ruamel.yaml>=0.18",
    "typer>=0.9",
    "prometheus_client>=0.20",
    "fastapi>=0.112",
    "uvicorn>=0.30",
    "pytest>=8.4.1",
    "pytest-cov>=5.0.0",
    "openai>=1.0",
    "hypothesis>=6.112.0",
]

[project.scripts]
sgorch = "sgorch.main:app"
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
addopts = "-q --cov=src/sgorch --cov-report=term-missing"
